--- a/app/views/common/_navbar.html.erb
+++ b/app/views/common/_navbar.html.erb
@@ -8,9 +8,34 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav navbar-right">
-                <li>
-                    <%= link_to("登入", new_user_session_path) %>
-                </li>
+
+
+
+
+
+
+                <!-- 如果没有用户登录状态则显示注册于登录 -->
+                <% if !current_user %>
+                    <li><%= link_to("注册", new_user_registration_path) %></li>
+                    <li><%= link_to("登录", new_user_session_path) %></li>
+                <!-- 如果有用户登录则显示下拉菜单 -->
+                <% else %>
+                    <li class="dropdown">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                            Hi, <%= current_user.email %>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li> <%#= link_to("Historical orders", account_orders_path, method: :get) %> </li>
+                            <li> <%= link_to("Sign out", destroy_user_session_path, method: :delete) %> </li>
+                        </ul>
+                    </li>
+                <% end %>
+
+
+
+
+
+
             </ul>
         </div>
         <!-- /.navbar-collapse -->
