--- a/app/views/common/_footer.html.erb
+++ b/app/views/common/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="container" style="margin-top: 100px;">
-    <p class="text-center">Copyright ©2016 Rails101</p>
-    <p>Design by
+    <p class="text-center">Copyright ©2016 xditecourse
+    <br>Design by
       <a href="http://courses.growthschool.com/courses/rails-101/" target='_blank'>liangchaob</a>
     </p>
 </footer>
