--- a/app/views/landingpages/index.html.erb
+++ b/app/views/landingpages/index.html.erb
@@ -1,5 +1,7 @@
 <div class="row">
   <div class="col-md-12">
     <h1>Hello World!</h1>
+    <h2>hehe</h2>
+    <%= link_to("进入",  account_letters_path, class: "btn btn-default") %>
   </div>
 </div>
