cg heart edit to show

--- a/app/views/account/letters/index.html.erb
+++ b/app/views/account/letters/index.html.erb
@@ -27,7 +27,7 @@
       <% end %>
       
       <!-- 新建信件 -->
-      <%= link_to("新建邮件", new_account_letter_path, class: "btn btn-default") %>
+      <%= link_to("新建邮件", new_account_letter_path, class: "btn btn-primary btn-lg") %>
 
     </div>    
     <!-- 信件条目 -->
